# GenericDeviceServer

./: .jenkinsfile  CMakeLists.txt  README.md
cmake/: set_control_system_adapter.cmake
include/: GenericApp.h
sample_configs/: LogicExample.py  demo-doublebuf-dummy.sh  demo-doublebuf-techlab.sh  demo-dummy-opcua.sh  demo-step1.sh  demo-step12.sh  demo-step2.sh  demo-techlab-doocs.sh  demo-techlab-opcua.sh  demo-userints.py  devices.dmap  devices.dmap.dummy  devices.dmap.xdma  doocs-generic-chimeratk-server.conf  doocs-generic-chimeratk-server01.conf  doocs-generic-chimeratk-server_configuration.xml  example_dwc8vm1.mapp  example_dwc8vm1.xlmap  example_dwc8vm1_ro.mapp  fakeRunning.py  fw_simulation.py  generic_chimeratk_server-DoocsVariableConfig.xml  generic_chimeratk_server-config.xml  generic_chimeratk_server_configuration.xml  generic_chimeratk_server_configuration.xml.irq  generic_chimeratk_server_configuration.xml.timer  generic_chimeratk_server_configuration_minimal.xml  generic_chimeratk_server_mapping.xml  generic_server-DoocsVariableConfig.xml  initscript.py  main.py  rfsync_mo13synth_flmo_0.0.0-75-g063b93e1.mapp  sis8300ku_example_design_dwc8vm1_2.4.0-1-g1abe78b6.mapp  tango-generic-chimeratk-server02-AttributeMapper.xml  user_irq.xlmap
sample_configs/configurations/: configurations.py
sample_configs/dut/: dut.py
sample_configs/include/: GenericApp.h  create_dmap.py  example_ds8vm1.mapp  example_dwc8vm1.mapp  xdma_wrapper.py
sample_configs/include/ds8vm1_pll_config_files/: pll_config_162_5MHz_to_121_875MHz_clock.txt  pll_config_200MHz_to_60MHz_clock.txt  pll_config_260MHz_to_78MHz_clock.txt  pll_config_clock_distribution.txt
sample_configs/opcua_certs/: mskpcx29268_cert.der  mskpcx29268_key.der  server_key.der  techlabcpullrfdev_cert.der  techlabcpullrfdev_key.der
sample_configs/sample_configs/: devices.dmap  example_dwc8vm1.mapp  example_dwc8vm1.xlmap  fakeRunning.py  generic_chimeratk_server-DoocsVariableConfig.xml  generic_chimeratk_server_configuration.xml  main.py
sample_configs/sample_configs/tests/: adc_dac_test.py  initialize.py
sample_configs/tests/: adc_dac_test.py  initialize.py  irq_test.py
server/: genericServerInstance.cc  generic_server.cc
src/: GenericApp.cc
tests/: testGenericServer.cc  writeWordStatus.cc
tools/: bootstrap-generic-server.py
